# clibempty

./: CMakeLists.txt
src/private/: clibempty.c
